calendar alignment fix

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -159,6 +159,7 @@
   width: 100%;
   margin-right: auto;
   margin-top: 20px;
+  margin-bottom: 5%;
   .we-stat, .we-cal{
     text-decoration: none;
     background-color: #a9d248;
@@ -213,7 +214,7 @@
   }
 
   .fitness, .cholesterol{
-    margin-left: 5%;
+//    margin-left: 5%;
   }
 
   .fitness, .diet, .weight_bmi, .cholesterol, .blood_sugar, .blood_pressure {
